overflow fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
     body {
-        @apply bg-zinc-900 text-neutral-50;
+        @apply bg-zinc-900 text-neutral-50 overflow-x-hidden;
     }
 }
 
